--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/mongodb": "^4.0.7",
     "dotenv": "^16.0.1",
     "mongodb": "^4.8.1",
     "next": "12.2.3",
